# FP-Iris

./: README.md
FPMagang/: copas.txt
FPMagang/devel/: .catkin  local_setup.sh  setup.sh
FPMagang/devel/include/FP_Magang/: PC2BS.h
FPMagang/devel/lib/FP_Magang/: node1  node2  node3
FPMagang/devel/lib/pkgconfig/: FP_Magang.pc
FPMagang/devel/lib/python3/dist-packages/FP_Magang/msg/: _BS2PC.py  _PC2BS.py  __init__.py
FPMagang/devel/share/FP_Magang/cmake/: FP_Magang-msg-extras.cmake  FP_Magang-msg-paths.cmake  FP_MagangConfig.cmake
FPMagang/devel/share/common-lisp/ros/FP_Magang/msg/: BS2PC.lisp  FP_Magang-msg.asd  PC2BS.lisp  _package.lisp  _package_PC2BS.lisp
FPMagang/devel/share/gennodejs/ros/FP_Magang/msg/: BS2PC.js  PC2BS.js  _index.js
FPMagang/devel/share/roseus/ros/FP_Magang/: manifest.l
FPMagang/devel/share/roseus/ros/FP_Magang/msg/: BS2PC.l  PC2BS.l
FPMagang/src/FP_Magang/: CMakeLists.txt
FPMagang/src/FP_Magang/msg/: BS2PC.msg  PC2BS.msg
FPMagang/src/FP_Magang/src/: node1.cpp  node2.cpp  node3.cpp
